--- a/site/_includes/custom_layouts/news-single.liquid
+++ b/site/_includes/custom_layouts/news-single.liquid
@@ -6,20 +6,20 @@
         <div class="col-lg-12">
           <article class="blog-single">
             <div class="inner-blog-details">
-              <h2 class="w-xxl-70 w-xl-80 w-100">{{ title }}</h2>
+              <h2 class="w-xxl-70 w-xl-80 w-100">{{ post.data.title }}</h2>
               <div class="inner-blog-details-meta">
                 <ul class="list-unstyled">
                   <li class="list-inline-item">
-                    <p>{{ date | postDate }}</p>
+                    <p>{{ post.data.date | postDate }}</p>
                   </li>
                   <li class="list-inline-item">
                     <p>
                       <span>
                         Written by:</span>
-                      {{ author }}</p>
+                      {{ post.data.author }}</p>
                   </li>
                   <li class="list-inline-item">
-                    <p>{{ content | emojiReadTime | replace: ".", "" }}</p>
+                    <p>{{ post.content | emojiReadTime | replace: ".", "" }}</p>
                   </li>
                   {% if content != "" and content.length > 0 %}
                     {% assign contentWordCount = content | wordCount %}
@@ -35,10 +35,10 @@
               </div>
             </div>
             <img
-              src="{{ featuredImg.image }}"
+              src="{{ post.data.division_url }}{{ post.data.featuredImg.image }}"
               class="w-100 mb-xxl-11 mb-8"
-              alt="{{ featuredImg.image_alt }}" />
-            <div style="max-width: 900px; margin: 0 auto">{{ content }}</div>
+              alt="{{ post.data.featuredImg.image_alt }}" />
+            <div style="max-width: 900px; margin: 0 auto">{{ post.content | markdownify }}</div>
           </article>
         </div>
       </div>
