--- a/site/_includes/custom_layouts/news.liquid
+++ b/site/_includes/custom_layouts/news.liquid
@@ -5,22 +5,23 @@
          <div class="row">
             <div class="col-xl-8 col-lg-10 mx-auto">
                <div class="blog-hero-content">
-                  <h1 class="blog-hero-title">{{tag | capitalize}}</h1>
+                  <h1 class="blog-hero-title">{{title}}</h1>
                   <p>{{description}}</p>
                </div>
             </div>
          </div>
       </div>
    </section>
-   <section class="blog @@padding @@blog-two pb-10 pb-xl-15">
+   <section class="blog @@padding @@blog-two">
       <div class="container">
          <div class="row">
-         {% for blog in collections[tag] %}
+         {% for blog in aggregateNews %}
+         {% capture post_url %}/news/{{ blog.data.division | slugify}}/{{ blog.data.title | slugify }}/{% endcapture %}
          <div class="col-lg-4 col-md-6">
                <article class="blog-post">
                   <div class="blog-post-thumb">
-                     <a href="{{ blog.url }}">
-                        <img src="{{ blog.data.thumbImg.image }}" alt="{{ blog.data.thumbImg.image_alt }}" loading="lazy" />
+                     <a href="{{ post_url }}">
+                        <img src="{{ blog.data.division_url }}{{ blog.data.thumbImg.image }}" alt="{{ blog.data.thumbImg.image_alt }}" loading="lazy" />
                      </a>
                   </div>
                   <div class="blog-post-content">
@@ -30,13 +31,12 @@
                      {% endfor %}
                      </div>
                      <div class="blog-post-title">
-                        <a href="{{ blog.url }}" class="">{{blog.data.title}}</a>
+                        <a href="{{ post_url }}" class="">{{blog.data.title}}</a>
                      </div>
                   </div>
                </article>
             </div>
          {% endfor %}
-            
          </div>
       </div>
    </section>
