--- a/site/_includes/custom_layouts/news.liquid
+++ b/site/_includes/custom_layouts/news.liquid
@@ -15,7 +15,7 @@
    <section class="blog @@padding @@blog-two">
       <div class="container">
          <div class="row">
-         {% for blog in aggregateNews %}
+         {% for blog in syndicatedNews %}
          {% capture post_url %}/news/{{ blog.data.division | slugify}}/{{ blog.data.title | slugify }}/{% endcapture %}
          <div class="col-lg-4 col-md-6">
                <article class="blog-post">
