--- a/site/_includes/custom_layouts/news-single.liquid
+++ b/site/_includes/custom_layouts/news-single.liquid
@@ -10,7 +10,7 @@
               <div class="inner-blog-details-meta">
                 <ul class="list-unstyled">
                   <li class="list-inline-item">
-                    <p>{{ post.data.date | postDate }}</p>
+                    <p>{{ post.data.date | stringDate }}</p>
                   </li>
                   <li class="list-inline-item">
                     <p>
